Correct spelling to collapsible from collapsable

--- a/packages/global/scss/components/_collapsible-sidebar.scss
+++ b/packages/global/scss/components/_collapsible-sidebar.scss
@@ -1,4 +1,4 @@
-.collapsable-sidebar {
+.collapsible-sidebar {
   margin-bottom: 1rem;
   &__item {
     &--table-of-contents::before {
